# forge-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  landing-copy.md  pyproject.toml  server.json
deploy/: mcp-forge.service  mcp.forge.example.nginx.conf
docs/: claude-code-install.md  install.md
src/forge_mcp/: __init__.py  auth.py  forge_service_client.py  schemas.py  server.py  vault_fs.py  vault_registry.py
src/forge_mcp/resources/: __init__.py  artifact_uri.py  note_uri.py  recipe_uri.py
src/forge_mcp/tools/: __init__.py  commit_recipe.py  compile_recipe.py  create_directory.py  create_note.py  delete_note.py  get_run_result.py  list_vaults.py  read_note.py  read_note_catalog.py  read_notes_in_vault.py  register_vault.py  rename_note.py  run_recipe.py  unregister_vault.py
tests/: test_artifact_resource.py  test_auth.py  test_commit_recipe.py  test_compile_recipe.py  test_create_directory.py  test_create_note.py  test_delete_note.py  test_error_message_shape.py  test_forge_service_client.py  test_get_run_result.py  test_list_vaults.py  test_main_transport.py  test_multi_vault_extension.py  test_note_uri_parser.py  test_output_schemas_audit.py  test_read_catalog_tool.py  test_read_note.py  test_read_vault_tool.py  test_register_vault.py  test_rename_note.py  test_run_recipe.py  test_tool_schemas.py  test_tool_wire_shape.py  test_unregister_vault.py  test_vault_registry.py
