[project]
name = "forge-mcp"
version = "0.1.0"
description = "forge-MCP: read-only surface of the Forge E-- library note catalog + vault, exposed as an MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Oded Fuhrmann" },
]
dependencies = [
  "mcp>=1.0",
  "httpx>=0.27",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "mypy>=1.10",
  "ruff>=0.5",
]

[project.scripts]
forge-mcp = "forge_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
